--- a/playtime.html
+++ b/playtime.html
@@ -167,7 +167,7 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="creche.html">Home</a>
+        <a href="index.html">Home</a>
     </div>
     <div class="container">
         <header>
