--- a/index.html
+++ b/index.html
@@ -131,6 +131,64 @@
         footer a:hover {
             text-decoration: underline;
         }
+        <style>
+    /* Pour les petits appareils (téléphones, moins de 600px de largeur) */
+    @media (max-width: 600px) {
+        .navbar {
+            flex-direction: column;
+            text-align: center;
+        }
+        .navbar img {
+            max-height: 60px;
+            margin-right: 0;
+        }
+        .navbar-links {
+            flex-direction: column;
+        }
+        .navbar-links a {
+            margin: 5px 0;
+        }
+        .activity {
+            height: 200px;
+        }
+        #contact-form {
+            width: 90%;
+        }
+        section h2 {
+            font-size: 18px;
+        }
+    }
+
+    /* Pour les tablettes (entre 600px et 1024px) */
+    @media (min-width: 601px) and (max-width: 1024px) {
+        .navbar img {
+            max-height: 80px;
+        }
+        .navbar h1 {
+            font-size: 20px;
+        }
+        .activity {
+            height: 250px;
+        }
+        #contact-form {
+            width: 80%;
+        }
+    }
+
+    /* Pour les grands écrans (plus de 1024px) */
+    @media (min-width: 1025px) {
+        .navbar img {
+            max-height: 100px;
+        }
+        .activity {
+            height: 300px;
+        }
+        #contact-form {
+            width: 600px;
+        }
+    }
+</style>
+
     </style>
 </head>
 <body>
